Fixed z-index on intro content

--- a/src/sass/modules/_intro.scss
+++ b/src/sass/modules/_intro.scss
@@ -36,7 +36,7 @@
 		bottom: 75px;
 		left:0;
 	    padding: 0 20px;
-		z-index: 100;
+		z-index: 150;
 		padding-top: 19vh;
 
 		@media (max-height: 500px) {
